2020-07-07         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, mpfrcase2.
	* mpfrcase2.awk, mpfrcase2.in, mpfrcase2.ok: New files.

2020-07-06         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* Makefile.am (AWK): Append $(GAWK_TEST_ARGS) to enable running
	tests with -M enabled for MPFR debugging.

2020-07-05         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New tests, mpfrcase, mpfrnonum.
	* mpfrcase.awk, mpfrcase.in, mpfrcase.ok,
	mpfrnonum.awk, mpfrnonum.in, mpfrnonum.ok: New files.

2020-07-02         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, posix_compare.
	* posix_compare.awk, posix_compare.ok: New files.
	
	Unrelated:

	* badargs.ok: Updated after code changes.

2020-06-29         Arnold D. Robbins     <arnold@skeeve.com>

	* dbugeval2.ok, dbugtypedre1.ok, dbugtypedre2.ok, symtab10.ok,
	watchpoint1.ok: Updated after code changes.

2020-06-10         Arnold D. Robbins     <arnold@skeeve.com>

	Miscellanious fixes from Michael Builov <mbuilov@gmail.com>.

	* Gentests: Use correct locale for JP.

2020-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, strfieldnum.
	* strfieldnum.awk, strfieldnum.in, strfieldnum.ok: New files.

2020-05-06         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, lintplus.
	* lintplus.awk, lintplus.ok: New files.

2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.1.0: Release tar ball made.

2020-04-10         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, fpat8.
	* fpat8.awk, fpat8.in, fpat8.ok: New files.

2020-04-02         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, rsnulw.
	* rsnulw.awk, rsnulw.in, rsnulw.ok: New files.

2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (zos-diffout): Change per request from