@@ -1,0 +1,9 @@
+[] -> 0 (type string)
+[5apple] -> 5 (type string)
+[NaN] -> nan (type strnum)
+[-NaN] -> nan (type strnum)
+[+NaN] -> nan (type strnum)
+[ 6] -> 6 (type strnum)
+[0x1az] -> 26 (type string)
+[011Q] -> 9 (type string)
+[027] -> 23 (type strnum)
