@@ -1,0 +1,2 @@
+-1.2e+931 -12000000000000000023869272521829212151376224284038826410491631072247223930898697894494751122199611031696331881198430123310788883489723019223000573640259371063714952207062438085168771640470751425809639568206897248922718204650691199569214339149443994838825335479571578957075566316988609963847861723327109992246837205567235607773890309471137488800374383009068687547118036715452301954858700836601124580336340038617883134449214092245802588446405229331386515660677585038235109701545271243902330575714021315127223571588764628179725351186585908351382110051143587405409927546018060172307656019659275511658624125158517807640363832094340920801581446507863850186984663749124902382044782795512644763497122330988233279646807817789403972164002561612114866682762706548477524115596786591512372612296461584970713050884678735893942581035124339179550774662878726741328519231942448856426396556949721845110345583968012206662741485777689522285472492027904 12000000000000000023869272521829212151376224284038826410491631072247223930898697894494751122199611031696331881198430123310788883489723019223000573640259371063714952207062438085168771640470751425809639568206897248922718204650691199569214339149443994838825335479571578957075566316988609963847861723327109992246837205567235607773890309471137488800374383009068687547118036715452301954858700836601124580336340038617883134449214092245802588446405229331386515660677585038235109701545271243902330575714021315127223571588764628179725351186585908351382110051143587405409927546018060172307656019659275511658624125158517807640363832094340920801581446507863850186984663749124902382044782795512644763497122330988233279646807817789403972164002561612114866682762706548477524115596786591512372612296461584970713050884678735893942581035124339179550774662878726741328519231942448856426396556949721845110345583968012206662741485777689522285472492027904
+1.2e+931 12000000000000000023869272521829212151376224284038826410491631072247223930898697894494751122199611031696331881198430123310788883489723019223000573640259371063714952207062438085168771640470751425809639568206897248922718204650691199569214339149443994838825335479571578957075566316988609963847861723327109992246837205567235607773890309471137488800374383009068687547118036715452301954858700836601124580336340038617883134449214092245802588446405229331386515660677585038235109701545271243902330575714021315127223571588764628179725351186585908351382110051143587405409927546018060172307656019659275511658624125158517807640363832094340920801581446507863850186984663749124902382044782795512644763497122330988233279646807817789403972164002561612114866682762706548477524115596786591512372612296461584970713050884678735893942581035124339179550774662878726741328519231942448856426396556949721845110345583968012206662741485777689522285472492027904 -12000000000000000023869272521829212151376224284038826410491631072247223930898697894494751122199611031696331881198430123310788883489723019223000573640259371063714952207062438085168771640470751425809639568206897248922718204650691199569214339149443994838825335479571578957075566316988609963847861723327109992246837205567235607773890309471137488800374383009068687547118036715452301954858700836601124580336340038617883134449214092245802588446405229331386515660677585038235109701545271243902330575714021315127223571588764628179725351186585908351382110051143587405409927546018060172307656019659275511658624125158517807640363832094340920801581446507863850186984663749124902382044782795512644763497122330988233279646807817789403972164002561612114866682762706548477524115596786591512372612296461584970713050884678735893942581035124339179550774662878726741328519231942448856426396556949721845110345583968012206662741485777689522285472492027904
