@@ -1,3 +1,10 @@
+2020-07-08         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRADIST): Add additional ok files for MPFR.
+	(CHECK_MPFR): Add arraytype, arrdbg, forcenum and numrange
+	(arrdbg): Update to check -mpfr.ok file also.
+	* arraytype-mpfr.ok, arrdbg-mpfr.ok, forcenum-mpfr.ok, numrange-mpfr.ok: New files.
+
 2020-07-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New test, mpfrcase2.
